Fix: Slider aligned to grid, cards overflow left on scroll

--- a/sass/blocks/_trusted-by.scss
+++ b/sass/blocks/_trusted-by.scss
@@ -47,15 +47,15 @@
 
 .trusted-by-slider {
 	width: 100%;
-	margin-top: $spacing-4xl;
-	overflow: visible;
-	padding-left: max(#{$spacing-lg}, calc((100vw - #{$container-max-width-content}) / 2 + #{$spacing-lg}));
+	max-width: #{$container-max-width-content};
+	margin: $spacing-4xl auto 0;
+	padding: 0 $spacing-lg;
 	box-sizing: border-box;
+	overflow: visible;
 }
 
 .trusted-by-slider .swiper-wrapper {
 	align-items: stretch;
-	overflow: visible;
 }
 
 .trusted-by-card.swiper-slide {
